# react-fastapi

./: react-fastapi.code-workspace  sales_info.db
backend/: .gitignore  Makefile  alembic.ini  crud.py  main.py  models.py  pyproject.toml  sales_info.db  schemas.py
backend/api/: admin.py  crud.py  main.py  models.py  router.py  sales.py  schemas.py  user.py
backend/api/crud/: admin.py  sales.py  user.py  users.py
backend/api/endpoints/: admin.py  deps.py  router.py  sales.py  token.py  user.py  users.py
backend/api/middleware/: middleware.py
backend/api/migrations/: env.py
backend/api/migrations/versions/: 0df0f3d3d9c9_add_role_column.py  850183cc023c_add_role_column.py
backend/core/: config.py  security.py
backend/db/: session.py
backend/models/: sales.py  user.py
backend/schemas/: sales.py  user.py
backend/services/middleware/: auth.py  middleware.py
backend/services/migrations/: env.py
backend/services/migrations/versions/: 13d0d5b73920_create_tables.py  779903bde63f_remove_default_role.py  9faa803c32db_add_hashed_password.py  f33afb741b14_create_new_table.py
frontend/: package-lock.json
frontend/src/: App.js  index.js
frontend/src/components/elements/: BarChart.js  BasicMenu.js  ReadCsv.js  ReadDatabase.js  SelectYear.js  UpdateSalesForm.js
frontend/src/components/hooks/: useCreateSales.js  useLogin.js  useReadSales.js  useRegister.js  useUpdateSales.js
frontend/src/components/pages/: Home.js  Login.js  LoginFailed.js  Register.js  RegisterFailed.js  RegisterSucceeded.js
frontend/src/components/templates/: Footer.js  Header.js
