[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ryo0333 <windsguitar@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
pydantic = "^2.10.5"
sqlalchemy = "^2.0.37"
uvicorn = "^0.34.0"
ruff = "^0.9.1"
alembic = "^1.14.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.20"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
